Histogram and swimming medals

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:26:29.538602Z",
@@ -81,9 +81,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Types of sports:\n",
+      "Basketball\n",
+      "Judo\n",
+      "Football\n",
+      "Tug-Of-War\n",
+      "Speed Skating\n",
+      "Cross Country Skiing\n",
+      "Athletics\n",
+      "Ice Hockey\n",
+      "Swimming\n",
+      "Badminton\n",
+      "Sailing\n",
+      "Biathlon\n",
+      "Gymnastics\n",
+      "Art Competitions\n",
+      "Alpine Skiing\n",
+      "Handball\n",
+      "Weightlifting\n",
+      "Wrestling\n",
+      "Luge\n",
+      "Water Polo\n",
+      "Hockey\n",
+      "Rowing\n",
+      "Bobsleigh\n",
+      "Fencing\n",
+      "Equestrianism\n",
+      "Shooting\n",
+      "Boxing\n",
+      "Taekwondo\n",
+      "Cycling\n",
+      "Diving\n",
+      "Canoeing\n",
+      "Tennis\n",
+      "Modern Pentathlon\n",
+      "Figure Skating\n",
+      "Golf\n",
+      "Softball\n",
+      "Archery\n",
+      "Volleyball\n",
+      "Synchronized Swimming\n",
+      "Table Tennis\n",
+      "Nordic Combined\n",
+      "Baseball\n",
+      "Rhythmic Gymnastics\n",
+      "Freestyle Skiing\n",
+      "Rugby Sevens\n",
+      "Trampolining\n",
+      "Beach Volleyball\n",
+      "Triathlon\n",
+      "Ski Jumping\n",
+      "Curling\n",
+      "Snowboarding\n",
+      "Rugby\n",
+      "Short Track Speed Skating\n",
+      "Skeleton\n",
+      "Lacrosse\n",
+      "Polo\n",
+      "Cricket\n",
+      "Racquets\n",
+      "Motorboating\n",
+      "Military Ski Patrol\n",
+      "Croquet\n",
+      "Jeu De Paume\n",
+      "Roque\n",
+      "Alpinism\n",
+      "Basque Pelota\n",
+      "Aeronautics\n"
+     ]
+    }
+   ],
    "source": [
     "sports_list = data_athletes['Sport'].unique()\n",
     "\n",
@@ -189,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:27.112742200Z",
@@ -210,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:27.919724800Z",
@@ -218,14 +292,33 @@
     },
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    261642.000000\n",
+       "mean         25.556898\n",
+       "std           6.393561\n",
+       "min          10.000000\n",
+       "25%          21.000000\n",
+       "50%          24.000000\n",
+       "75%          28.000000\n",
+       "max          97.000000\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "age_stats.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:28.971366100Z",
@@ -233,7 +326,88 @@
     },
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>74098.0</td>\n",
+       "      <td>23.732881</td>\n",
+       "      <td>5.795252</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>187544.0</td>\n",
+       "      <td>26.277562</td>\n",
+       "      <td>6.474972</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        count       mean       std   min   25%   50%   75%   max\n",
+       "Sex                                                             \n",
+       "F     74098.0  23.732881  5.795252  11.0  20.0  23.0  27.0  74.0\n",
+       "M    187544.0  26.277562  6.474972  10.0  22.0  25.0  29.0  97.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "age_stats_by_sex.describe()"
    ]
@@ -249,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T09:23:16.172045900Z",
@@ -271,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T09:23:17.643751300Z",
@@ -279,7 +453,170 @@
     },
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Medal</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Bronze</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">F</th>\n",
+       "      <th>10-19</th>\n",
+       "      <td>852</td>\n",
+       "      <td>837</td>\n",
+       "      <td>787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-29</th>\n",
+       "      <td>2469</td>\n",
+       "      <td>2458</td>\n",
+       "      <td>2531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-39</th>\n",
+       "      <td>398</td>\n",
+       "      <td>401</td>\n",
+       "      <td>407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40-49</th>\n",
+       "      <td>22</td>\n",
+       "      <td>28</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50-59</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60-69</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70-79</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80-89</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">M</th>\n",
+       "      <th>10-19</th>\n",
+       "      <td>985</td>\n",
+       "      <td>936</td>\n",
+       "      <td>1014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-29</th>\n",
+       "      <td>6696</td>\n",
+       "      <td>6405</td>\n",
+       "      <td>6581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-39</th>\n",
+       "      <td>1488</td>\n",
+       "      <td>1432</td>\n",
+       "      <td>1348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40-49</th>\n",
+       "      <td>249</td>\n",
+       "      <td>250</td>\n",
+       "      <td>241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50-59</th>\n",
+       "      <td>57</td>\n",
+       "      <td>55</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60-69</th>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70-79</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80-89</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Medal          Gold  Silver  Bronze\n",
+       "Sex Age Group                      \n",
+       "F   10-19       852     837     787\n",
+       "    20-29      2469    2458    2531\n",
+       "    30-39       398     401     407\n",
+       "    40-49        22      28      32\n",
+       "    50-59         2       5       3\n",
+       "    60-69         1       0       3\n",
+       "    70-79         0       0       0\n",
+       "    80-89         0       0       0\n",
+       "M   10-19       985     936    1014\n",
+       "    20-29      6696    6405    6581\n",
+       "    30-39      1488    1432    1348\n",
+       "    40-49       249     250     241\n",
+       "    50-59        57      55      51\n",
+       "    60-69         5      11       5\n",
+       "    70-79         0       3       2\n",
+       "    80-89         0       0       0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "age_group_medals"
    ]
@@ -325,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:30.899847300Z",
@@ -357,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,6 +718,88 @@
     "medals_per_sport_australia.update_layout(xaxis_tickangle=-90)\n",
     "\n",
     "medals_per_sport_australia.write_html(\"../Projekt_OS_Australien/Visualisering/Medals_per_sport_australia.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Histogram over the ages of Australian athletes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the diagram\n",
+    "Histogram_Australia = px.histogram(\n",
+    "    australian_athletes,\n",
+    "    x=\"Age\",\n",
+    "    nbins=25,\n",
+    "    title=\"Age of Australian olympic athletes\"\n",
+    ")\n",
+    "\n",
+    "# Creating a gap between each bar so it's easier to look at\n",
+    "Histogram_Australia.update_layout(\n",
+    "    bargap=0.2\n",
+    ")\n",
+    "\n",
+    "Histogram_Australia.write_html(\"../Projekt_OS_Australien/Visualisering/Histogram_Australia_Ages.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Swimming "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Medals per country competing in Swimming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_sport = \"Swimming\"\n",
+    "\n",
+    "# Filteres the data so only swimmers are left\n",
+    "filitered_swimming = data_athletes[data_athletes[\"Sport\"] == filter_sport]\n",
+    "\n",
+    "# Creates a series by grouping NOC and medal column together.\n",
+    "# .size() counts the values in each group\n",
+    "# unstack(fill_value=0) reshapes it into a dataframe again, while also changing the NaN values to 0\n",
+    "# reset_index() resets the index again\n",
+    "medals_swimming = filitered_swimming.groupby([\"NOC\", \"Medal\"]).size().unstack(fill_value=0).reset_index()\n",
+    "\n",
+    "# Filtering out the countries who has participated but has not won any medals\n",
+    "medals_swimming = medals_swimming[medals_swimming[[\"Gold\", \"Silver\", \"Bronze\"]].sum(axis=1) > 0]\n",
+    "\n",
+    "# Sorting the countries based on total medals for easier readability\n",
+    "medals_swimming[\"Total Medals\"] = medals_swimming[[\"Gold\", \"Silver\", \"Bronze\"]].sum(axis=1)\n",
+    "medals_swimming = medals_swimming.sort_values(by=\"Total Medals\", ascending=False)\n",
+    "\n",
+    "# Taking the top 20 countries for easier readability\n",
+    "medals_swimming = medals_swimming.head(20)\n",
+    "\n",
+    "medals_country_swimming = px.bar(\n",
+    "    medals_swimming,\n",
+    "    x=\"NOC\",\n",
+    "    y=[\"Gold\", \"Silver\", \"Bronze\"],\n",
+    "    labels={\"NOC\": \"Country\", \"value\" : \"Medals\"},\n",
+    "    barmode=\"group\",\n",
+    "    title=\"Amount of Swimming medals per country\"\n",
+    ")\n",
+    "\n",
+    "medals_country_swimming.write_html(\"../Projekt_OS_Australien/Visualisering/Medals_country_swimming.html\")\n"
    ]
   }
  ],
