Age groups for swimming

--- a/main.ipynb
+++ b/main.ipynb
@@ -801,6 +801,33 @@
     "\n",
     "medals_country_swimming.write_html(\"../Projekt_OS_Australien/Visualisering/Medals_country_swimming.html\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Age groups for swimming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_distrobution_swimming = px.histogram(\n",
+    "    filitered_swimming,\n",
+    "    x=\"Age\",\n",
+    "    nbins=10,\n",
+    "    title=\"Age distrubution of swimmers\"\n",
+    ")\n",
+    "\n",
+    "age_distrobution_swimming.update_layout(\n",
+    "    bargap=0.1\n",
+    ")\n",
+    "\n",
+    "age_distrobution_swimming.write_html(\"../Projekt_OS_Australien/Visualisering/Age_distrubution_swimming.html\")"
+   ]
   }
  ],
  "metadata": {
