--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:26:29.538602Z",
@@ -30,9 +30,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afghanistan\n",
+      "Curacao\n",
+      "Albania\n",
+      "Algeria\n",
+      "Andorra\n",
+      "Angola\n",
+      "Antigua\n",
+      "Australia\n",
+      "Argentina\n",
+      "Armenia\n",
+      "Aruba\n",
+      "American Samoa\n",
+      "Austria\n",
+      "Azerbaijan\n",
+      "Bahamas\n",
+      "Bangladesh\n",
+      "Barbados\n",
+      "Burundi\n",
+      "Belgium\n",
+      "Benin\n",
+      "Bermuda\n",
+      "Bhutan\n",
+      "Bosnia and Herzegovina\n",
+      "Belize\n",
+      "Belarus\n",
+      "Czech Republic\n",
+      "Boliva\n",
+      "Botswana\n",
+      "Brazil\n",
+      "Bahrain\n",
+      "Brunei\n",
+      "Bulgaria\n",
+      "Burkina Faso\n",
+      "Central African Republic\n",
+      "Cambodia\n",
+      "Canada\n",
+      "Cayman Islands\n",
+      "Republic of Congo\n",
+      "Chad\n",
+      "Chile\n",
+      "China\n",
+      "Ivory Coast\n",
+      "Cameroon\n",
+      "Democratic Republic of the Congo\n",
+      "Cook Islands\n",
+      "Colombia\n",
+      "Comoros\n",
+      "Cape Verde\n",
+      "Costa Rica\n",
+      "Croatia\n",
+      "Greece\n",
+      "Cuba\n",
+      "Cyprus\n",
+      "Denmark\n",
+      "Djibouti\n",
+      "Dominica\n",
+      "Dominican Republic\n",
+      "Ecuador\n",
+      "Egypt\n",
+      "Eritrea\n",
+      "El Salvador\n",
+      "Spain\n",
+      "Estonia\n",
+      "Ethiopia\n",
+      "Russia\n",
+      "Fiji\n",
+      "Finland\n",
+      "France\n",
+      "Germany\n",
+      "Micronesia\n",
+      "Gabon\n",
+      "Gambia\n",
+      "UK\n",
+      "Guinea-Bissau\n",
+      "Georgia\n",
+      "Equatorial Guinea\n",
+      "Ghana\n",
+      "Grenada\n",
+      "Guatemala\n",
+      "Guinea\n",
+      "Guam\n",
+      "Guyana\n",
+      "Haiti\n",
+      "Honduras\n",
+      "Hungary\n",
+      "Indonesia\n",
+      "India\n",
+      "Iran\n",
+      "Ireland\n",
+      "Iraq\n",
+      "Iceland\n",
+      "Israel\n",
+      "Virgin Islands, US\n",
+      "Italy\n",
+      "Virgin Islands, British\n",
+      "Jamaica\n",
+      "Jordan\n",
+      "Japan\n",
+      "Kazakhstan\n",
+      "Kenya\n",
+      "Kyrgyzstan\n",
+      "Kiribati\n",
+      "South Korea\n",
+      "Kosovo\n",
+      "Saudi Arabia\n",
+      "Kuwait\n",
+      "Laos\n",
+      "Latvia\n",
+      "Libya\n",
+      "Liberia\n",
+      "Saint Lucia\n",
+      "Lesotho\n",
+      "Lebanon\n",
+      "Liechtenstein\n",
+      "Lithuania\n",
+      "Luxembourg\n",
+      "Madagascar\n",
+      "Malaysia\n",
+      "Morocco\n",
+      "Malawi\n",
+      "Moldova\n",
+      "Maldives\n",
+      "Mexico\n",
+      "Mongolia\n",
+      "Marshall Islands\n",
+      "Macedonia\n",
+      "Mali\n",
+      "Malta\n",
+      "Montenegro\n",
+      "Monaco\n",
+      "Mozambique\n",
+      "Mauritius\n",
+      "Mauritania\n",
+      "Myanmar\n",
+      "Namibia\n",
+      "Nicaragua\n",
+      "Netherlands\n",
+      "Nepal\n",
+      "Nigeria\n",
+      "Niger\n",
+      "Norway\n",
+      "Nauru\n",
+      "New Zealand\n",
+      "Oman\n",
+      "Pakistan\n",
+      "Panama\n",
+      "Paraguay\n",
+      "Peru\n",
+      "Philippines\n",
+      "Palestine\n",
+      "Palau\n",
+      "Papua New Guinea\n",
+      "Poland\n",
+      "Portugal\n",
+      "North Korea\n",
+      "Puerto Rico\n",
+      "Qatar\n",
+      "Zimbabwe\n",
+      "nan\n",
+      "Romania\n",
+      "South Africa\n",
+      "Rwanda\n",
+      "Samoa\n",
+      "Serbia\n",
+      "Senegal\n",
+      "Seychelles\n",
+      "Singapore\n",
+      "Saint Kitts\n",
+      "Sierra Leone\n",
+      "Slovenia\n",
+      "San Marino\n",
+      "Solomon Islands\n",
+      "Somalia\n",
+      "Sri Lanka\n",
+      "South Sudan\n",
+      "Sao Tome and Principe\n",
+      "Sudan\n",
+      "Switzerland\n",
+      "Suriname\n",
+      "Slovakia\n",
+      "Sweden\n",
+      "Swaziland\n",
+      "Syria\n",
+      "Tanzania\n",
+      "Tonga\n",
+      "Thailand\n",
+      "Tajikistan\n",
+      "Turkmenistan\n",
+      "Timor-Leste\n",
+      "Togo\n",
+      "Taiwan\n",
+      "Trinidad\n",
+      "Tunisia\n",
+      "Turkey\n",
+      "United Arab Emirates\n",
+      "Uganda\n",
+      "Ukraine\n",
+      "Uruguay\n",
+      "USA\n",
+      "Uzbekistan\n",
+      "Vanuatu\n",
+      "Venezuela\n",
+      "Vietnam\n",
+      "Saint Vincent\n",
+      "Yemen\n",
+      "Zambia\n",
+      "Tuvalu\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract unique region names\n",
     "unique_regions = data_noc['region'].unique()\n",
@@ -58,9 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of unique regions: 207\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter out excluded regions and count\n",
     "filtered_regions = [\n",
@@ -81,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -175,9 +397,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Types of medals:\n",
+      "Gold\n",
+      "Bronze\n",
+      "Silver\n"
+     ]
+    }
+   ],
    "source": [
     "medal_types = data_athletes['Medal'].unique()\n",
     "\n",
@@ -198,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:27.112742200Z",
@@ -284,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:27.919724800Z",
@@ -307,7 +540,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:28.971366100Z",
@@ -403,7 +636,7 @@
        "M    187544.0  26.277562  6.474972  10.0  22.0  25.0  29.0  97.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T09:23:16.172045900Z",
@@ -445,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T09:23:17.643751300Z",
@@ -612,7 +845,7 @@
        "    80-89         0       0       0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T09:28:18.047440600Z",
@@ -662,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:30.899847300Z",
@@ -694,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
