Adding australian medals per year diagram

--- a/main.ipynb
+++ b/main.ipynb
@@ -722,6 +722,45 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "### Amount of medals per olympic games for Australia"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Create dataframe grouping australian medals per season, year and medal amounts\n",
+    "# Sort the columns, gold first, bronze last\n",
+    "# Create stacked bar chart to show results\n",
+    "\n",
+    "australian_medals_per_year = australian_medals.groupby([\"Season\", \"Year\", \"Medal\"]).size().unstack(fill_value=0)\n",
+    "australian_medals_per_year = australian_medals_per_year[[\"Gold\", \"Silver\", \"Bronze\"]].reset_index()\n",
+    "\n",
+    "\n",
+    "australian_medals_per_year_diagram = px.bar(\n",
+    "    australian_medals_per_year,\n",
+    "    x=\"Year\",\n",
+    "    y=[\"Gold\", \"Silver\", \"Bronze\"],\n",
+    "    color_discrete_map={\"Gold\": \"gold\", \"Silver\": \"silver\", \"Bronze\": \"brown\"},\n",
+    "    barmode=\"stack\",\n",
+    "    facet_col=\"Season\",\n",
+    "    labels={\"value\": \"Medal Count\", \"Year\": \"Year\"},\n",
+    "    title=\"Amount of medals per olympic games for Australia\",\n",
+    ")\n",
+    "\n",
+    "australian_medals_per_year_diagram.write_html(\"../Projekt_OS_Australien/Visualisering/Medals_per_year_australia.html\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Histogram over the ages of Australian athletes"
