--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:26:29.538602Z",
@@ -81,83 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Types of sports:\n",
-      "Basketball\n",
-      "Judo\n",
-      "Football\n",
-      "Tug-Of-War\n",
-      "Speed Skating\n",
-      "Cross Country Skiing\n",
-      "Athletics\n",
-      "Ice Hockey\n",
-      "Swimming\n",
-      "Badminton\n",
-      "Sailing\n",
-      "Biathlon\n",
-      "Gymnastics\n",
-      "Art Competitions\n",
-      "Alpine Skiing\n",
-      "Handball\n",
-      "Weightlifting\n",
-      "Wrestling\n",
-      "Luge\n",
-      "Water Polo\n",
-      "Hockey\n",
-      "Rowing\n",
-      "Bobsleigh\n",
-      "Fencing\n",
-      "Equestrianism\n",
-      "Shooting\n",
-      "Boxing\n",
-      "Taekwondo\n",
-      "Cycling\n",
-      "Diving\n",
-      "Canoeing\n",
-      "Tennis\n",
-      "Modern Pentathlon\n",
-      "Figure Skating\n",
-      "Golf\n",
-      "Softball\n",
-      "Archery\n",
-      "Volleyball\n",
-      "Synchronized Swimming\n",
-      "Table Tennis\n",
-      "Nordic Combined\n",
-      "Baseball\n",
-      "Rhythmic Gymnastics\n",
-      "Freestyle Skiing\n",
-      "Rugby Sevens\n",
-      "Trampolining\n",
-      "Beach Volleyball\n",
-      "Triathlon\n",
-      "Ski Jumping\n",
-      "Curling\n",
-      "Snowboarding\n",
-      "Rugby\n",
-      "Short Track Speed Skating\n",
-      "Skeleton\n",
-      "Lacrosse\n",
-      "Polo\n",
-      "Cricket\n",
-      "Racquets\n",
-      "Motorboating\n",
-      "Military Ski Patrol\n",
-      "Croquet\n",
-      "Jeu De Paume\n",
-      "Roque\n",
-      "Alpinism\n",
-      "Basque Pelota\n",
-      "Aeronautics\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sports_list = data_athletes['Sport'].unique()\n",
     "\n",
@@ -263,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:27.112742200Z",
@@ -284,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:27.919724800Z",
@@ -292,33 +218,14 @@
     },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    261642.000000\n",
-       "mean         25.556898\n",
-       "std           6.393561\n",
-       "min          10.000000\n",
-       "25%          21.000000\n",
-       "50%          24.000000\n",
-       "75%          28.000000\n",
-       "max          97.000000\n",
-       "Name: Age, dtype: float64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "age_stats.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:28.971366100Z",
@@ -326,88 +233,7 @@
     },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>F</th>\n",
-       "      <td>74098.0</td>\n",
-       "      <td>23.732881</td>\n",
-       "      <td>5.795252</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>74.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>187544.0</td>\n",
-       "      <td>26.277562</td>\n",
-       "      <td>6.474972</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>97.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        count       mean       std   min   25%   50%   75%   max\n",
-       "Sex                                                             \n",
-       "F     74098.0  23.732881  5.795252  11.0  20.0  23.0  27.0  74.0\n",
-       "M    187544.0  26.277562  6.474972  10.0  22.0  25.0  29.0  97.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "age_stats_by_sex.describe()"
    ]
@@ -423,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T09:23:16.172045900Z",
@@ -445,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T09:23:17.643751300Z",
@@ -453,170 +279,7 @@
     },
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Medal</th>\n",
-       "      <th>Gold</th>\n",
-       "      <th>Silver</th>\n",
-       "      <th>Bronze</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age Group</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"8\" valign=\"top\">F</th>\n",
-       "      <th>10-19</th>\n",
-       "      <td>852</td>\n",
-       "      <td>837</td>\n",
-       "      <td>787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-29</th>\n",
-       "      <td>2469</td>\n",
-       "      <td>2458</td>\n",
-       "      <td>2531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-39</th>\n",
-       "      <td>398</td>\n",
-       "      <td>401</td>\n",
-       "      <td>407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40-49</th>\n",
-       "      <td>22</td>\n",
-       "      <td>28</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50-59</th>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60-69</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70-79</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80-89</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"8\" valign=\"top\">M</th>\n",
-       "      <th>10-19</th>\n",
-       "      <td>985</td>\n",
-       "      <td>936</td>\n",
-       "      <td>1014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-29</th>\n",
-       "      <td>6696</td>\n",
-       "      <td>6405</td>\n",
-       "      <td>6581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-39</th>\n",
-       "      <td>1488</td>\n",
-       "      <td>1432</td>\n",
-       "      <td>1348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40-49</th>\n",
-       "      <td>249</td>\n",
-       "      <td>250</td>\n",
-       "      <td>241</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50-59</th>\n",
-       "      <td>57</td>\n",
-       "      <td>55</td>\n",
-       "      <td>51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60-69</th>\n",
-       "      <td>5</td>\n",
-       "      <td>11</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70-79</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80-89</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Medal          Gold  Silver  Bronze\n",
-       "Sex Age Group                      \n",
-       "F   10-19       852     837     787\n",
-       "    20-29      2469    2458    2531\n",
-       "    30-39       398     401     407\n",
-       "    40-49        22      28      32\n",
-       "    50-59         2       5       3\n",
-       "    60-69         1       0       3\n",
-       "    70-79         0       0       0\n",
-       "    80-89         0       0       0\n",
-       "M   10-19       985     936    1014\n",
-       "    20-29      6696    6405    6581\n",
-       "    30-39      1488    1432    1348\n",
-       "    40-49       249     250     241\n",
-       "    50-59        57      55      51\n",
-       "    60-69         5      11       5\n",
-       "    70-79         0       3       2\n",
-       "    80-89         0       0       0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "age_group_medals"
    ]
@@ -662,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-20T08:52:30.899847300Z",
@@ -694,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,16 +385,19 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Amount of medals per olympic games for Australia"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "### Amount of medals per olympic games for Australia"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Create dataframe grouping australian medals per season, year and medal amounts\n",
@@ -754,10 +420,7 @@
     ")\n",
     "\n",
     "australian_medals_per_year_diagram.write_html(\"../Projekt_OS_Australien/Visualisering/Medals_per_year_australia.html\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -768,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,6 +529,43 @@
     ")\n",
     "\n",
     "age_distrobution_swimming.write_html(\"../Projekt_OS_Australien/Visualisering/Age_distrubution_swimming.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tug-Of-War\n",
+    "\n",
+    "## Medal distribution among countries in Tug-Of-War"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter for Tug-Of-War\n",
+    "tug_of_war_data = data_athletes[data_athletes['Sport'] == 'Tug-Of-War']\n",
+    "\n",
+    "# Plot for medal distribution among countries in Tug-Of-War\n",
+    "tug_of_war_medals = tug_of_war_data[tug_of_war_data['Medal'].notna()]\n",
+    "medal_distribution_tug_of_war = tug_of_war_medals['NOC'].value_counts().reset_index()\n",
+    "medal_distribution_tug_of_war.columns = ['NOC', 'Medals']\n",
+    "\n",
+    "medal_distribution_tug_of_war = px.bar(\n",
+    "    medal_distribution_tug_of_war.head(10),\n",
+    "    x='NOC', \n",
+    "    y='Medals',\n",
+    "    title='Top 10 Countries in Medal Count for Tug-Of-War',\n",
+    "    labels={\n",
+    "        'NOC': 'National Olympic Committee',\n",
+    "        'Medals': 'Number of Medals'\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "medal_distribution_tug_of_war.write_html(\"../Projekt_OS_Australien/Visualisering/Medal_distribution_tug_of_war.html\")"
    ]
   }
  ],
@@ -885,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
