--- a/main.ipynb
+++ b/main.ipynb
@@ -162,10 +162,10 @@
     "# Creating a pie chart\n",
     "sex_distribution_piechart = px.pie(sex_distribution, \n",
     "            # The lambda function in the names argument is used to map \"F\" to \"Female\" and \"M\" to \"Male\".\n",
-    "             names=sex_distribution.index.map(lambda x: 'Female' if x == 'F' else 'Male'),\n",
-    "             values=sex_distribution.values,\n",
-    "             title='Sex distribution of all athletes',\n",
-    "             labels={'names' : 'Sex', \"values\" : 'Amount'})\n",
+    "            names=sex_distribution.index.map(lambda x: 'Female' if x == 'F' else 'Male'),\n",
+    "            values=sex_distribution.values,\n",
+    "            title='Sex distribution of all athletes',\n",
+    "            labels={'names' : 'Sex', \"values\" : 'Amount'})\n",
     "\n",
     "sex_distribution_piechart.write_html((\"../Projekt_OS_Australien/Visualisering/Sex_distribution_piechart.html\"))"
    ]
@@ -407,10 +407,10 @@
     "\n",
     "# Create a bar chart to visualize the results\n",
     "medals_per_sport_australia = px.bar(medal_counts, \n",
-    "             x=medal_counts.index, \n",
-    "             y=medal_counts.values, \n",
-    "             title='Number of Medals per Sport for Australia',\n",
-    "             labels={'x': 'Sport', 'y': 'Number of Medals'})\n",
+    "            x=medal_counts.index, \n",
+    "            y=medal_counts.values, \n",
+    "            title='Number of Medals per Sport for Australia',\n",
+    "            labels={'x': 'Sport', 'y': 'Number of Medals'})\n",
     "\n",
     "# Rotating the values under the x-axis\n",
     "medals_per_sport_australia.update_layout(xaxis_tickangle=-90)\n",
@@ -589,14 +589,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tug-Of-War\n",
+    "## Tug-Of-War\n",
     "\n",
-    "## Medal distribution among countries in Tug-Of-War by years"
+    "### Medal distribution among countries in Tug-Of-War by years"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,6 +630,43 @@
     "\n",
     "\n",
     "medal_distribution_per_year_tug_of_war.write_html(\"../Projekt_OS_Australien/Visualisering/Medal_distribution_tug_of_war.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Age distribution among athletes in Tug-Of-War"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tug_of_war_age_data = tug_of_war_data[tug_of_war_data['Age'].notna()]\n",
+    "\n",
+    "# Taking out the highest and lowest values in 'Age'\n",
+    "min_age = tug_of_war_age_data['Age'].min()\n",
+    "max_age = tug_of_war_age_data['Age'].max()\n",
+    "\n",
+    "age_distribution_tug_of_war = px.histogram(\n",
+    "    tug_of_war_age_data, \n",
+    "    x=\"Age\",\n",
+    "    nbins=int(max_age - min_age + 1),\n",
+    "    title=\"Age Distribution Among Athletes in Tug-Of-War\",\n",
+    "    labels={'Age': 'Age of Athletes'}\n",
+    ")\n",
+    "\n",
+    "age_distribution_tug_of_war.update_layout(\n",
+    "    bargap = 0.2\n",
+    ")\n",
+    "\n",
+    "age_distribution_tug_of_war.update_xaxes(\n",
+    "    dtick=1\n",
+    ")\n",
+    "age_distribution_tug_of_war.write_html(\"../Projekt_OS_Australien/Visualisering/Age_distribution_tug_of_war.html\")"
    ]
   },
   {
